<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCryptoBet"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/cryptobet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCryptoBet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="42sp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:padding="20dp"
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorPrimaryVariant"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRegistration" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorPrimaryVariant"
                android:textSize="24sp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textStyle="italic|bold"
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorPrimaryVariant"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textStyle="italic|bold"
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorPrimaryVariant"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <EditText
                android:id="@+id/edittextBalanse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/balance"
                android:inputType="numberDecimal"
                android:padding="20dp"
                android:textStyle="italic|bold"
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorPrimaryVariant"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextRepeat" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBegin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/begin"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="36sp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittextBalanse" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>